--- a/Noticias.html
+++ b/Noticias.html
@@ -414,7 +414,7 @@
             
             <nav>
                 <ul>
-                    <li><a href="Inicio.html" class="nav-link">Inicio</a></li>
+                    <li><a href="Index.html" class="nav-link">Inicio</a></li>
                     <li><a href="noticias.html" class="nav-link active">Noticias</a></li>
                     <li><a href="equipos.html" class="nav-link">Equipos</a></li>
                     <li><a href="partidos.html" class="nav-link">Partidos</a></li>
@@ -538,7 +538,7 @@
                 <div class="footer-column">
                     <h3>Enlaces Rápidos</h3>
                     <ul>
-                        <li><a href="Inicio.html">Inicio</a></li>
+                        <li><a href="Index.html">Inicio</a></li>
                         <li><a href="noticias.html">Noticias</a></li>
                         <li><a href="equipos.html">Equipos</a></li>
                         <li><a href="partidos.html">Partidos</a></li>
